// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast closed 1`] = `ShallowWrapper {}`;

exports[`Toast renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <p
      className="c3"
      color="white"
      display="flex"
    >
      Seleccione una propiedad
    </p>
  </div>
  <div
    className="c4"
  >
    <button
      className="c5"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c6"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly five 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  width: small;
  height: small;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 2em;
  height: 2em;
  padding: 8px;
  border-radius: 50%;
  background-image: conic-gradient(#272E33,#FFFFFF);
  -webkit-animation: bCrGrT 1s ease 0s infinite;
  animation: bCrGrT 1s ease 0s infinite;
  -webkit-clip-path: circle(80px at center);
  clip-path: circle(80px at center);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <loader
      className="c3"
    >
      <div
        className="c4 c5"
        kind="primary"
        size="small"
      />
    </loader>
    <p
      className="c6"
      color="white"
      display="flex"
    >
      Cargando...
    </p>
  </div>
  <div
    className="c7"
  >
    <button
      className="c8"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c9"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly four 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <i
        className="icon-check"
        style={
          {
            "bottom": "0px",
            "fontSize": "32px",
            "height": "32px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "32px",
          }
        }
      />
    </div>
    <p
      className="c4"
      color="white"
      display="flex"
    >
      Success message
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c7"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly four 2`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <i
        className="icon-error"
        style={
          {
            "bottom": "0px",
            "fontSize": "32px",
            "height": "32px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "32px",
          }
        }
      />
    </div>
    <p
      className="c4"
      color="white"
      display="flex"
    >
      Error message
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c7"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly seven 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 12px;
  height: 12px;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <i
        className="icon-check"
        style={
          {
            "bottom": "0px",
            "fontSize": "32px",
            "height": "32px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "32px",
          }
        }
      />
    </div>
    <p
      className="c4"
      color="white"
      display="flex"
    >
      Report export ready!
    </p>
    <div
      className="c5"
    >
      <button
        className="c6"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c7"
        >
          <i
            className="icon-descargar"
            style={
              {
                "bottom": "0px",
                "fontSize": "12px",
                "height": "12px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "12px",
              }
            }
          />
        </div>
        <span>
          Download
        </span>
      </button>
    </div>
  </div>
  <div
    className="c5"
  >
    <button
      className="c8"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c9"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly six 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  width: small;
  height: small;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  width: 2em;
  height: 2em;
  padding: 8px;
  border-radius: 50%;
  background-image: conic-gradient(#272E33,#FFFFFF);
  -webkit-animation: bCrGrT 1s ease 0s infinite;
  animation: bCrGrT 1s ease 0s infinite;
  -webkit-clip-path: circle(80px at center);
  clip-path: circle(80px at center);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <loader
      className="c3"
    >
      <div
        className="c4 c5"
        kind="primary"
        size="small"
      />
    </loader>
    <p
      className="c6"
      color="white"
      display="flex"
    >
      Exportando...
    </p>
  </div>
  <div
    className="c7"
  >
    <button
      className="c8"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c9"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`Toast renders correctly three 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px 24px 0px 0px;
  gap: 24px;
  position: relative;
  width: 423px;
  height: 72px;
  background: #272E33;
  border-radius: 6px;
  color: white;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  width: 327px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0px;
  gap: 16px;
  margin-left: 24px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 32px;
  height: 32px;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 14px;
  height: 14px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <div
      className="c3"
    >
      <i
        className="icon-alertas"
        style={
          {
            "bottom": "0px",
            "fontSize": "32px",
            "height": "32px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "32px",
          }
        }
      />
    </div>
    <p
      className="c4"
      color="white"
      display="flex"
    >
      Alert message
    </p>
  </div>
  <div
    className="c5"
  >
    <button
      className="c6"
      color="white"
      onClick={[Function]}
    >
      <div
        className="c7"
      >
        <i
          className="icon-cerrar"
          style={
            {
              "bottom": "0px",
              "fontSize": "14px",
              "height": "14px",
              "left": "-0.5px",
              "position": "absolute",
              "right": "0px",
              "top": "-1px",
              "width": "14px",
            }
          }
        />
      </div>
    </button>
  </div>
</div>
`;
